syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package dscount;

service DsicountProtoService{
	rpc GetDiscount(GetDiscountRequest) returns(CouponRequest);
	rpc CreateDiscount(CouponRequest) returns(CouponRequest);
	rpc UpdateDiscount(CouponRequest) returns (CouponRequest);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string product_id = 1;
}

message CouponRequest{
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string description = 4;
	int32 amount = 5;
}

message DeleteDiscountRequest{
	string product_id = 1; 
}
message DeleteDiscountResponse{
	bool success = 1;
}

// The greeting service definition.
//service Greeter {
  // Sends a greeting
//  rpc SayHello (HelloRequest) returns (HelloReply);
//}

// The request message containing the user's name.
//message HelloRequest {
  //string name = 1;
//}

// The response message containing the greetings.
//message HelloReply {
 // string message = 1;
//}
